@@ -1,7 +1,7 @@
 (define-tree-filter quote-keywords (x)
   (| (quote? x)
      (& (cons? x)
-        (in? x. 'make-hash-table '%%%make-hash-table)))
+        (in? x. 'make-hash-table '%%%make-object)))
 	x
   (keyword? x) 
     `(quote ,x))
