@@ -40,7 +40,7 @@
       ,@(js-gen-inherit-methods class-name (!? (class-parent cls)
                                                (class-name !)))
       (hash-merge (slot-value ,class-name 'prototype)
-	              (%%%make-hash-table ,@(apply #'+ (carlist !)))))))
+	              (%%%make-object ,@(apply #'+ (carlist !)))))))
 
 (define-js-std-macro finalize-class (class-name)
   (print-definition `(finalize-class ,class-name))
