@@ -1,7 +1,7 @@
-(defun hash-table? (x)
+(fn hash-table? (x)
   (is_a x "__array"))
 
-(defun %%key (x)
+(fn %%key (x)
   (?
     (is_a x "__symbol")    (%%%string+ "~%S" x.n "~%P" (? (keyword? x)
                                                           "_kw"
@@ -11,7 +11,7 @@
     (is_a x "__character") (%%%string+ "~%C" x.v)
     x))
 
-(defun %%unkey (x)
+(fn %%unkey (x)
   (? (%%%== "~%" (substr x 0 2))
      (alet (substr x 3)
        (case (substr x 2 1) :test #'%%%==
@@ -27,37 +27,37 @@
          (error "Illegal index ~A." x)))
      x))
 
-(defun hashkeys (x)
+(fn hashkeys (x)
   (? (hash-table? x)
      (@ #'%%unkey (x.keys))
      (maparray #'identity (phphash-hashkeys x))))
 
-(defun hash-merge (a b)
+(fn hash-merge (a b)
   (| a (= a (make-hash-table)))
   (@ (k (hashkeys b) a)
     (= (href a k) (href b k))))
 
-(defun alist-phphash (x)
-  (let a (%%%make-hash-table)
-    (@ (i x a)
-      (%%%href-set .i a i.))))
+(fn alist-phphash (x)
+  (!= (%%%make-object)
+    (@ (i x !)
+      (%%%href-set .i ! i.))))
 
-(defun phphash-alist (x)
+(fn phphash-alist (x)
   (with-queue q
     (@ (i (hashkeys x) (queue-list q))
       (enqueue q (. i (aref x i))))))
 
-(defun %href-error (h)
+(fn %href-error (h)
   (error "HREF expects an hash table instead of ~A." h))
 
-(defun href (h k)
+(fn href (h k)
   (alet (%%key k)
     (? (is_a h "__array")
        (h.g !)
        (& (php-aref-defined? h !)
           (php-aref h !)))))
 
-(defun (= href) (v h k)
+(fn (= href) (v h k)
   (alet (%%key k)
     (?  (is_a h "__array")
         (h.s (%%key !) v)
